# lugy_hpc_libs

./: CMakeLists.txt  README.md  lugy_hpc_libs_build.sh
include/: gemm.h  reduce.h  transpose.h
src/c/: gemm.cc  reduce.cc  transpose.cc
src/cuda/: gemm.cu  reduce.cu  transpose.cu
tests/: gemm.cc  reduce.cc  transpose.cc
